Envío de datos entre Componentes

--- a/src/app/componentes/hijo/hijo.component.html
+++ b/src/app/componentes/hijo/hijo.component.html
@@ -1,1 +1,12 @@
-<p>hijo works!</p>
+<div>
+    <p>hijo works!</p>
+    <p>soy el componente hijo y mi padre (app.component)
+        me acaba de enviar este dato asd
+    </p>
+
+    {{datohijo.nombre}}
+    {{datohijo.apellido}}
+    {{datohijo.edad}}
+    {{datohijo.documento}}
+
+</div>
