--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
     "datos" que se encuentra definido como un atributo 
     del componente "app", este atributo sera recibido en 
     el atributo "datohijo" del componente "hijo" -->
-  <!-- <app-hijo [propiedadhijo]="datos"></app-hijo> -->
+  <app-hijo [propiedadhijo]="datos"></app-hijo>
   </div>
   <router-outlet />
   
